--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,14 +2,195 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <div th:replace="fragments/header :: header-css" />
+	<link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
+<style>
+table{
+	width: calc( 100% - 10rem);
+	margin-left: 10rem;
+	overflow: scroll;
+	margin-top: 0.2rem;
+	margin-bottom: 3rem;
+	font-size: 1.6rem;
+}
+table tr{
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	position: relative;
+	transition: all 0.4s ease;
+}
+table tr:not(.parentData){
+	margin: 1rem 0 0.5rem 0;
+	border: 1px solid darkgray;
+}
+table tr.childData.key{
+	background: lightgray;
+	font-weight: bolder;
+}
 
+table tr.childData.key:before{
+	content:"Child Data";
+	position: absolute;
+	left: -10rem;
+	width: 10rem;
+	background: lightgrey;
+	text-align: right;
+	color: white;
+}
+
+table tr.childData.value.hasParentData::before{
+	content: "\f35e";
+	font-family: "Ionicons";
+	position: absolute;
+	left: -3rem;
+	top: -0.6rem;
+	font-size: 2.5rem;
+}
+table tr.childData.value.hasParentData.on::before{
+	transform: rotate(180deg);
+}
+table tr.childData.value:hover{
+	color: lightgreen;
+}
+
+table tr.parentData.key{
+	background: lightgray;
+}
+table tr.parentData.key:before{
+	content:"Parent Data";
+	position: absolute;
+	left: -10rem;
+	width: 10rem;
+	background: lightgrey;
+	color: white;
+	text-align: right;
+}
+table tr.parentData.key.off:before{
+	content:"";
+}
+table tr td{
+	width: 12rem;
+	margin-left: 2rem;
+	text-align: left;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+.off{
+	display: none;
+}
+#progressBar{
+	display: none;
+	position: fixed;
+	top: calc(50% - 6rem);
+	left: calc(50% - 6rem);
+	width: 10rem;
+	height: 10rem;
+	border: 2rem solid lightskyblue;
+	border-top:2rem solid white;
+	border-radius: 5rem;
+	-webkit-animation-name: Rotate;
+	-webkit-animation-duration: 1s;
+	-webkit-animation-timing-function: linear;
+	-webkit-animation-iteration-count: infinite;
+	z-index: 10;
+	box-shadow: 0 0 99999px 99999px rgba(0,0,0,0.4);
+	-moz-box-shadow: 0 0 99999px 99999px rgba(0,0,0,0.4);
+	-webkit-box-shadow: 0 0 99999px 99999px rgba(0,0,0,0.4);
+	-ms-box-shadow: 0 0 99999px 99999px rgba(0,0,0,0.4);
+	-o-box-shadow: 0 0 99999px 99999px rgba(0,0,0,0.4);
+}
+@-webkit-keyframes Rotate {
+	0% {
+		-webkit-transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(360deg);
+	}
+}
+
+/*search bar start*/
+#searchBar {
+	margin-left: 0.5rem;
+	margin-top: 2rem;
+}
+#searchBar input {
+	outline: none;
+}
+#searchBar input[type=search] {
+	-webkit-appearance: textfield;
+	-webkit-box-sizing: content-box;
+	font-family: inherit;
+	font-size: 100%;
+
+}
+#searchBar input::-webkit-search-decoration,
+#searchBar input::-webkit-search-cancel-button {
+	display: none;
+}
+
+
+#searchBar input[type=search] {
+	background: transparent url(https://cdn3.iconfinder.com/data/icons/web-and-internet-icons/512/Magnifying_Glass-512.png) no-repeat right -1px top 0px;
+	background-size: 30px 30px;
+	border: none;
+	padding: 5px 5px 5px 5px;
+	width: 16rem;
+	color: transparent;
+
+	-webkit-border-radius: 10em;
+	-moz-border-radius: 10em;
+	border-radius: 10em;
+
+	background-position: right;
+	background-color: #fff;
+	border-color: 1px solid lightgreen;
+	color: black;
+
+	-webkit-box-shadow: 0 0 5px rgba(0,102,51,.9);
+	-moz-box-shadow: 0 0 5px rgba(0,102,51,.9);
+	box-shadow: 0 0 5px rgba(0,102,51,.9);
+
+}
+
+#searchBar input[type=checkbox]{
+	margin-left: 2rem;
+}
+/*search bar end*/
+
+#pageDiv{
+	margin-top: 1rem;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+}
+#pageDiv span{
+	font-size: 1.8rem;
+	min-width: 3rem;
+	background: #d9d9d9;
+	text-align: center;
+	margin-right: 0.5rem;
+	cursor: pointer;
+	transition: all 0.5s ease;
+}
+#pageDiv span:hover{
+	background: lightgreen;
+	color:white;
+}
+
+#pageDiv span.selected{
+	background: lightgreen;
+	color:white;
+}
+</style>
 
 </head>
 <body>
 
 	<div th:replace="fragments/header :: header" />
 
-	
+	<div id="progressBar"></div>
 	<div class="container">
 	<form id="upload-file-form">
 		<div class="well well-lg">
@@ -78,13 +259,16 @@
 		
 		<button type="button" class="btn btn-success" name="btnMatchFiles"
 				id="btnMatchFiles">validate</button>
+
+		<div id="searchBar" class="off">
+			<input type="search" name="search"/>
+			<input type="checkbox" id="enablePagenation"/>
+			<label>Enable Pagenation(not support in search result)</label>
+		</div>
 		</form>
 	</div>
 
-	<div>
-		<table id="grid"><tr><td></td></tr></table>
-    		<div id="pager"></div>
-	</div>
+
 
 
 
@@ -102,8 +286,9 @@
 	<script
 		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	
-	 <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	
 	 <script type="text/ecmascript" src="/js/jquery.jqGrid.min.js"></script>
 	 <script type="text/ecmascript" src="/js/i18n/grid.locale-en.js"></script>
 	<script src="/js/app/index.js"></script>
